--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,6 +1,11 @@
 <ion-header>
 
   <ion-navbar>
+  <ion-buttons>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+  </ion-buttons>
     <ion-title>Favorites</ion-title>
   </ion-navbar>
 
@@ -8,5 +13,18 @@
 
 
 <ion-content padding>
-
+    <ion-list>
+      <ion-item-sliding  *ngFor="let quo of quote">
+          <ion-item (click)="onClickPage(quo)">
+              <h2>{{quo.text}}</h2>
+              <p>{{quo.person}}</p>
+          </ion-item>
+          <ion-item-options>
+              <button ion-button color="danger" (click)="removeFromFavorite(quo)">
+                <ion-icon name="trash"></ion-icon>
+                Delete
+              </button>
+          </ion-item-options>
+      </ion-item-sliding>
+  </ion-list>
 </ion-content>
