--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the QuotePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -13,6 +7,22 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding text-center>
+  <ion-card *ngFor="let quo of quote" padding>
+    <ion-card-title>
+      #{{quo.id}}
+    </ion-card-title>
+    <h2>{{quo.text}}</h2>
+    <p>{{quo.person}}</p>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <button ion-button outline small color="danger" (click)="closeModal(true)">
+            Unfavorite
+          </button>
+        </ion-col>
+      </ion-row>
+      </ion-grid>
+  </ion-card>
+  <button ion-button small color="danger" (click)="closeModal()">Close</button>
 </ion-content>
