--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the QuotesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Quotes</ion-title>
+    <ion-title>{{quotesText.category | uppercase}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list >
+      <ion-card padding *ngFor="let text of quotesText.quotes; let i = index">
+          <ion-card-title text-center>
+              #{{i + 1}}
+          </ion-card-title>
+          <p>
+            {{text.text}} <span class="f_12">-{{text.person}}</span>
+          </p>
+          <ion-row>
+            <ion-col text-right>
+                <button clear ion-button small outline (click)="addToFavorite(text)" *ngIf="!isFavorite(text)">
+                    Favorite
+                </button>
+                <button clear ion-button small outline color="danger" (click)="removeToFavorite(text)"  *ngIf="isFavorite(text)">
+                    Unfavorite
+                </button>
+            </ion-col>
+          </ion-row>
+      </ion-card>
+  </ion-list>
 </ion-content>
