--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,18 +1,28 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>Settings</ion-title>
+    <ion-buttons>
+        <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-label>
+          Alternate Background
+        </ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-toggle></ion-toggle>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
