--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -21,8 +21,9 @@
         </ion-label>
       </ion-col>
       <ion-col>
-        <ion-toggle></ion-toggle>
+        <ion-toggle (ionChange)="onToggle($event)" [checked]="getToggle()"></ion-toggle>     
       </ion-col>
     </ion-row>
+
   </ion-grid>
 </ion-content>
